force-app/main/default/objects/Apttus_Config2__RelatedPriceRuleset__c/Apttus_Config2__RelatedPriceRuleset__c.object-meta.xml
<CustomObject>
    <description>Holds the relationships between price rulesets</description>
    <label>Related Price Ruleset</label>
    <nameField>
        <displayFormat>RPR-{0000000000}</displayFormat>
        <label>Related Price Ruleset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Price Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>