force-app/main/default/objects/Apttus_Config2__RelatedPriceRuleset__c/fields/Apttus_Config2__PriceRulesetId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceRulesetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the price ruleset</description>
    <inlineHelpText>ID of the price ruleset</inlineHelpText>
    <label>Price Ruleset</label>
    <referenceTo>Apttus_Config2__PriceRuleset__c</referenceTo>
    <relationshipLabel>Related Price Rulesets</relationshipLabel>
    <relationshipName>RelatedPriceRulesets</relationshipName>
    <type>Lookup</type>
</CustomField>