force-app/main/default/objects/Apttus_Config2__RelatedPriceRuleset__c/fields/Apttus_Config2__RelatedPriceRulesetId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedPriceRulesetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the related price ruleset</description>
    <inlineHelpText>ID of the related price ruleset</inlineHelpText>
    <label>Related Price Ruleset</label>
    <referenceTo>Apttus_Config2__PriceRuleset__c</referenceTo>
    <relationshipLabel>Related Price Rulesets (Related Price Ruleset)</relationshipLabel>
    <relationshipName>RelatedPriceRulesets1</relationshipName>
    <type>Lookup</type>
</CustomField>