force-app/main/default/objects/Apttus_Config2__RelatedPriceRuleset__c/fields/Apttus_Config2__RelationType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelationType__c</fullName>
    <label>Relation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Related Waterfall Adjustment Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>